add description to .env file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
+# API key (consumer_key)
 CK=
+
+# API secret key (consumer_secret)
 CS=
+
+# Access token (token)
 AT=
+
+# Access token secret (token_secret)
 AS=
